# photo-view-plus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  copydevdata2prd.ps1  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
ai-worker/: models.json  pyproject.toml
ai-worker/scripts/: check_runtime.py  download_models.py
ai-worker/src/: __init__.py  main.py  model_registry.py  runtime.py
ai-worker/src/api/: __init__.py  clip.py  face.py  health.py  models.py  ocr.py  tagger.py
ai-worker/src/models/: __init__.py  clip_loader.py  tagger_loader.py
docs/: 00-architecture.md  01-data-model.md  02-ui-design.md  03-mvp1-browse.md  04-mvp2-dedup.md  05-mvp3-ai-search.md  06-mvp4-advanced.md  07-windows-platform.md  08-roadmap.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.json  tauri.test.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_hash_columns.sql  0003_ai_columns.sql  0004_ocr_face.sql  0005_smart_albums.sql
src-tauri/src/: commands.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  backup.rs  dedup.rs  face.rs  images.rs  mod.rs  ocr.rs  roots.rs  scan.rs  settings.rs  smart_album.rs  system.rs  trash.rs  watcher.rs
src-tauri/src/migrations/: mod.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/repo/: duplicates_repo.rs  face_repo.rs  images_repo.rs  lancedb_repo.rs  mod.rs  roots_repo.rs  smart_albums_repo.rs  tags_repo.rs
src-tauri/src/services/: ai_client.rs  ai_pipeline.rs  ai_supervisor.rs  backup_service.rs  dedup_service.rs  face_service.rs  hash_service.rs  mod.rs  ocr_service.rs  phash_service.rs  scan_service.rs  settings_service.rs  startup_gate.rs  thumbnail_service.rs  trash_service.rs  watcher_service.rs
src-tauri/src/utils/: bk_tree.rs  mod.rs  path_normalize.rs  read_gate.rs
src-tauri/tests/: db_tests.rs  dedup_tests.rs  images_tests.rs  lancedb_tests.rs  queue_tests.rs  roots_tests.rs  thumbnail_tests.rs
src/components/browse/: ImagePreviewLightbox.tsx
src/components/dedup/: DedupView.tsx
src/components/sidebar/: RootList.tsx
src/components/ui/: ContextMenu.tsx
src/hooks/: useDedup.ts  useRoots.ts
src/lib/: events.ts  perf.ts  tauri-types.ts  tauri.ts
src/styles/: globals.css
tests/: ai_bench.md
