[project]
name = "photo-view-plus-ai-worker"
version = "0.0.1"
description = "Local AI worker for PhotoView+"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pillow>=10.4.0",
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "onnxruntime-gpu>=1.20.0",
    "open_clip_torch>=2.26.0",
]
models = [
    "huggingface_hub>=0.24.0",
]
# RAM-plus（Recognize Anything Plus）多标签识别，原生中文标签。
# 注意：recognize-anything 不在 PyPI，且其 setup.py 钉死 timm==0.4.12 等老版本，
# 直接作为依赖会破坏 torch 2.11 / open_clip 环境。所以这里只放它运行时真正需要的
# transformers（BERT 文本编码器）；recognize-anything 本体用 --no-deps 单独装，见
# scripts/install_ram.py 或 docs/05。装：uv sync --extra cuda --extra tagger
tagger = [
    # RAM 的 BERT 文本编码器是 transformers 4.x 时代的自定义实现，5.x 大改 API 大概率不兼容，钉到 4.x。
    "transformers>=4.44.0,<5",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
