[project]
name = "photo-view-plus-ai-worker"
version = "0.0.1"
description = "Local AI worker for PhotoView+"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pillow>=10.4.0",
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "onnxruntime-gpu>=1.20.0",
    "open_clip_torch>=2.26.0",
]
models = [
    "huggingface_hub>=0.24.0",
]
ocr = [
    "rapidocr-onnxruntime>=1.4.0",
]
face = [
    "insightface>=0.7.3",
    "numpy>=1.26.0",
    "onnxruntime-gpu>=1.20.0",
]
# RAM-plus（Recognize Anything Plus）多标签识别，原生中文标签。
# 注意：recognize-anything 不在 PyPI，且其 setup.py 钉死 timm==0.4.12 等老版本，
# 直接作为依赖会破坏 torch 2.11 / open_clip 环境。所以这里只放它运行时真正需要的
# transformers（BERT 文本编码器）；recognize-anything 本体用 --no-deps 单独装，见
# scripts/install_ram.py 或 docs/05。装：uv sync --extra cuda --extra tagger
tagger = [
    # RAM 的 BERT 文本编码器是 transformers 4.x 时代的自定义实现，5.x 大改 API 大概率不兼容，钉到 4.x。
    # （bert.py 还从 modeling_utils 导已迁走的函数，tagger_loader 里有 shim 兜底。）
    "transformers>=4.44.0,<5",
    # swin_transformer.py 顶层 import scipy；ram_plus→utils→vit.py import fairscale 的 checkpoint_wrapper
    # （训练用，推理不调用，但 import 时要在）。
    "scipy>=1.13.0",
    "fairscale>=0.4.13",
    # RAM 仓库不在 PyPI，包名是 ram（setup.cfg name=ram），从 git 装；其 setup.cfg 无
    # install_requires，不会拉 requirements.txt 里钉死的老依赖（timm==0.4.12 等），可交给 uv 托管。
    "ram @ git+https://github.com/xinyu1205/recognize-anything.git",
]

[dependency-groups]
dev = []

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.metadata]
# 允许 tagger extra 里的 `ram @ git+...` 这种 URL 直接引用依赖。
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
