[package]
name = "photo-view-plus"
version = "0.0.1"
description = "PhotoView+ — local photo asset manager"
authors = ["vetoer"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "photo_view_plus_lib"
crate-type = ["lib", "cdylib", "staticlib"]
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
protoc-bin-vendored = "3"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
tokio-util = "0.7"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

# T2: SQLite + 连接池
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"

# MVP1: scan / EXIF / thumbnails
walkdir = "2"
image = "0.25"
kamadak-exif = "0.6"
sha1 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
http = "1"

# MVP2: dedup（去重）
blake3 = "1"
image_hasher = "2"
bk-tree = "0.5"
trash = { version = "5", default-features = false, features = ["coinit_multithreaded", "chrono"] }

# MVP3: semantic vector search
lancedb = "0.30"
arrow-array = "58"
arrow-schema = "58"

# MVP4: advanced library management
notify = "8"
zip = "4"

# Windows：线程优先级（缩略图解码切后台模式，不抢前台 UI 的 CPU/磁盘）
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
